added images and icon folder

--- a/flower.html
+++ b/flower.html
@@ -6,6 +6,25 @@
     <title>My Flower Market</title>
 </head>
 <body>
-    
+    <header>
+        <!-- logo -->
+        <div>
+            <img src="images/logo.png" alt="">
+        </div>
+        <nav>
+            <ul>
+                <li><a href=""></a>Home</li>
+                <li><a href=""></a>Shop</li>
+                <li><a href=""></a>About us</li>
+                <li><a href=""></a><img src="icon/cart.png" alt="">Cart ($56)</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
