added the about section style

--- a/flower.html
+++ b/flower.html
@@ -14,35 +14,38 @@
                 <img src="images/logo.png" alt="">
             </div>
         <!-- manu -->
-            <div">
-                <a class="mx-5" href="">Home</a>
-                <a class="mx-5" href="">Shop</a>
-                <a class="mx-5" href="">About us</a>
-                <a class="mx-5" href=""><img src="icon/cart.png" alt="">Cart ($56)</a>
+            <div class="text-[20px]">
+                <a href="" class="mr-5">Home</a>
+                <a href="" class="mr-5">Shop</a>
+                <a href="" class="mr-5">About us</a>
+                <a href=""><img class="inline mr-1" src="icon/cart.png" alt="">Cart ($56)</a>
             </div>
         </section>
         <!-- About Section -->
-        <section class="flex item-centre lg:max-w-6xl mx-auto my-20">
-            <div>
-                <h1>ALWAYS <span>FRESH</span> <br>FLOWERS</h1>
-                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+        <section class="flex gap-[13px] lg:max-w-[1140px] my-20 mx-auto">
+            <div class="w-[570px] mb-0 mt-30">
+                <h1 class="text-[50px] font-bold">ALWAYS <span class="text-[#E95A08]">FRESH</span> <br> <span class="text-[#E95A08]">FLOWERS</span></h1>
+                <p class="text-[18px] font-[400] mb-0">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div>
-                <img src="images/hero-flower.png" alt="">
+                <img class="w-[570px]" src="images/hero-flower.png" alt="">
             </div>
         </section>
     </header>
     <main>
         <!-- Our plant and card -->
-        <section class="justify-centre text-centre">
-            <h3>Our Plants</h3>
-            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-            <div class="grid grid-cols-3 lg:max-w-6xl justify-center m-auto">
-                 <div>
-                    <img src="images/sample-flower-image.png" alt="">
-                    <p>Lily Blossom</p>
-                    <p>20 USD</p>
-                    <button class="bg-[#E95A08]">ADD TO CART</button>
+        <section class="lg:max-w-6xl m-auto justify-center text-center">
+            <div class="item-center m-auto justify-center
+            mb-10">
+                <h3 class="text-[60px] font-bold"><span class="text-[#E95A08]">Our</span> Plants</h3>
+                <p class="text-2xl my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="grid grid-cols-4 lg:max-w-6xl justify-center m-auto">
+                 <div class="item-center justify-center">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] w-[270px] py-3 px-4 mb-6 mr-0 text-[20px] font-[400]">ADD TO CART</button>
                 </div>
                 <div>
                     <img src="images/sample-flower-image.png" alt="">
