added the card section and style

--- a/flower.html
+++ b/flower.html
@@ -34,48 +34,60 @@
     </header>
     <main>
         <!-- Our plant and card -->
-        <section class="lg:max-w-6xl m-auto justify-center text-center">
-            <div class="item-center m-auto justify-center
-            mb-10">
+        <section class="lg:max-w-6xl m-auto justify-center">
+            <div class="item-center text-center m-auto mb-10 px-[120px]">
                 <h3 class="text-[60px] font-bold"><span class="text-[#E95A08]">Our</span> Plants</h3>
                 <p class="text-2xl my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
-            <div class="grid grid-cols-4 lg:max-w-6xl justify-center m-auto">
-                 <div class="item-center justify-center">
+        <!-- Card style -->
+            <div class="grid grid-cols-4 lg:max-w-6xl m-auto">
+                <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
                     <p class="text-2xl mt-5">Lily Blossom</p>
                     <p class="text-2xl font-bold my-2">20 USD</p>
-                    <button class="bg-[#E95A08] w-[270px] py-3 px-4 mb-6 mr-0 text-[20px] font-[400]">ADD TO CART</button>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="images/sample-flower-image.png" alt="">
-                    <p>Lily Blossom</p>
-                    <p>20 USD</p>
-                    <button>ADD TO CART</button>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="images/sample-flower-image.png" alt="">
-                    <p>Lily Blossom</p>
-                    <p>20 USD</p>
-                    <button>ADD TO CART</button>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="images/sample-flower-image.png" alt="">
-                    <p>Lily Blossom</p>
-                    <p>20 USD</p>
-                    <button>ADD TO CART</button>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="images/sample-flower-image.png" alt="">
-                    <p>Lily Blossom</p>
-                    <p>20 USD</p>
-                    <button>ADD TO CART</button>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="images/sample-flower-image.png" alt="">
-                    <p>Lily Blossom</p>
-                    <p>20 USD</p>
-                    <button>ADD TO CART</button>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
+                </div>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
+                </div>
+                <div class="item-center m-auto">
+                    <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
+                    <p class="text-2xl mt-5">Lily Blossom</p>
+                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
             </div>
         </section>
