added the banner of our plant section

--- a/flower.html
+++ b/flower.html
@@ -25,7 +25,7 @@
         <section class="flex gap-[13px] lg:max-w-[1140px] my-20 mx-auto">
             <div class="w-[570px] mb-0 mt-30">
                 <h1 class="text-[50px] font-bold">ALWAYS <span class="text-[#E95A08]">FRESH</span> <br> <span class="text-[#E95A08]">FLOWERS</span></h1>
-                <p class="text-[18px] font-[400] mb-0">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <p class="text-[18px] font-[400] text-gray-400 mb-0">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div>
                 <img class="w-[570px]" src="images/hero-flower.png" alt="">
@@ -37,7 +37,7 @@
         <section class="lg:max-w-6xl m-auto justify-center">
             <div class="item-center text-center m-auto mb-10 px-[120px]">
                 <h3 class="text-[60px] font-bold"><span class="text-[#E95A08]">Our</span> Plants</h3>
-                <p class="text-2xl my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <p class="text-2xl my-5 text-gray-400">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
         <!-- Card style -->
             <div class="grid grid-cols-4 lg:max-w-6xl m-auto">
@@ -91,6 +91,20 @@
                 </div>
             </div>
         </section>
+        <!-- Banner for flower plant and lover -->
+         <section class="lg:max-w-6xl m-auto my-50 justify-center">
+            <div class="flex gap-[50px]">
+                <img class="w-[540px] h-[590px]" src="images/flower-store.png" alt="">
+                <div class="w-[540px] h-[521px] text-[50px] font-bold">
+                    <h3>Flower & Plants <br>Lover</h>
+                    <div class="text-2xl text-justify font-[400] text-gray-400">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </div>      
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
