added the google font

--- a/flower.html
+++ b/flower.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>My Flower Market</title>
+    <!-- Example: Poppins from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -93,9 +96,9 @@
         </section>
         <!-- Banner for flower plant and lover -->
          <section class="lg:max-w-6xl m-auto my-50 justify-center">
-            <div class="flex gap-[50px]">
+            <div class="flex gap-[55px]">
                 <img class="w-[540px] h-[590px]" src="images/flower-store.png" alt="">
-                <div class="w-[540px] h-[521px] text-[50px] font-bold">
+                <div class="w-[540px] h-[521px] text-[50px] font-bold mt-15">
                     <h3>Flower & Plants <br>Lover</h>
                     <div class="text-2xl text-justify font-[400] text-gray-400">
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
