added the font family and size

--- a/flower.html
+++ b/flower.html
@@ -26,9 +26,9 @@
         </section>
         <!-- About Section -->
         <section class="flex gap-[13px] lg:max-w-[1140px] my-20 mx-auto">
-            <div class="w-[570px] mb-0 mt-30">
-                <h1 class="text-[50px] font-bold">ALWAYS <span class="text-[#E95A08]">FRESH</span> <br> <span class="text-[#E95A08]">FLOWERS</span></h1>
-                <p class="text-[18px] font-[400] text-gray-400 mb-0">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            <div class="w-[570px] mb-0 mt-16">
+                <h1 class="text-[50px] font-bold font-serif">ALWAYS <span class="text-[#E95A08]">FRESH</span> <br> <span class="text-[#E95A08]">FLOWERS</span></h1>
+                <p class="text-2xl font-[400] text-gray-400 font-inter mb-0">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div>
                 <img class="w-[570px]" src="images/hero-flower.png" alt="">
@@ -39,8 +39,8 @@
         <!-- Our plant and card -->
         <section class="lg:max-w-6xl m-auto justify-center">
             <div class="item-center text-center m-auto mb-10 px-[120px]">
-                <h3 class="text-[60px] font-bold"><span class="text-[#E95A08]">Our</span> Plants</h3>
-                <p class="text-2xl my-5 text-gray-400">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <h3 class="text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Our</span> Plants</h3>
+                <p class="text-2xl my-5 text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
         <!-- Card style -->
             <div class="grid grid-cols-4 lg:max-w-6xl m-auto">
@@ -98,11 +98,11 @@
          <section class="lg:max-w-6xl m-auto my-50 justify-center">
             <div class="flex gap-[55px]">
                 <img class="w-[540px] h-[590px]" src="images/flower-store.png" alt="">
-                <div class="w-[540px] h-[521px] text-[50px] font-bold mt-15">
-                    <h3>Flower & Plants <br>Lover</h>
-                    <div class="text-2xl text-justify font-[400] text-gray-400">
+                <div class="w-[540px] h-[521px] text-[50px] font-bold mt-8">
+                    <h3 class="font-serif leading-tight">Flower & Plants Lover</h>
+                    <div class="text-2xl text-justify font-[400] font-inter text-gray-400 mt-3">
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     </div>      
                 </div>
