--- a/flower.html
+++ b/flower.html
@@ -46,56 +46,59 @@
             <div class="grid grid-cols-4 lg:max-w-6xl m-auto">
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
                 <div class="item-center m-auto">
                     <img class="w-[270px]" src="images/sample-flower-image.png" alt="">
-                    <p class="text-2xl mt-5">Lily Blossom</p>
-                    <p class="text-2xl font-bold my-2">20 USD</p>
+                    <p class="text-2xl text-center mt-5">Lily Blossom</p>
+                    <p class="text-2xl text-center font-bold my-2">20 USD</p>
                     <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
             </div>
         </section>
         <!-- Banner for flower plant and lover -->
          <section class="lg:max-w-6xl m-auto my-50 justify-center">
+            <div>
+                <img class="max-w-sm w-[286px] h-[286px] absolute top-470 left-195" src="images/trusted-badge.png" alt="">
+            </div>
             <div class="flex gap-[55px]">
                 <img class="w-[540px] h-[590px]" src="images/flower-store.png" alt="">
                 <div class="w-[540px] h-[521px] text-[50px] font-bold mt-8">
@@ -108,6 +111,31 @@
                 </div>
             </div>
          </section>
+         <!-- Deal section banner -->
+          <section class="lg:max-w-6xl m-auto my-50 justify-center">
+                <div class="item-center text-center m-auto mb-10 px-[120px]">
+                    <h3 class="text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Latest </span>Deals</h3>
+                    <p class="text-2xl my-5 text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                </div>
+                <div class="flex gap-10">
+            <!-- Left side 2 images -->
+                    <div class="grid grid-row-1 gap-5">
+                        <div class="bg-cover bg-center h-[206px] w-[366px] rounded-2xl content-center text-center" style="background-image: url('./images/deal-bloom.png');">
+                            <h4 class="text-[20px] font-serif font-bold text-white">60% Off | Bloom Plant</h4>
+                            <p class="text-2xl underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px] text-white">Shop Now</p>
+                        </div>
+                        <div class="bg-cover bg-center h-[206px] w-[366px] rounded-2xl content-center text-center" style="background-image: url('./images/deal-ana.png');">
+                            <h4 class="text-[20px] font-serif font-bold text-white">30% Off | Ana  Plant</h4>
+                            <p class="text-2xl underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px] text-white">Shop Now</p>
+                        </div>
+                    </div>
+            <!-- right side 1 image -->
+                    <div class="bg-cover bg-center h-[423px] w-[753px] rounded-2xl content-center text-center" style="background-image: url('./images/deal-zabo.png');">
+                        <h4 class="text-[40px] font-serif font-bold text-white">25% Off | Zabo Plant</h4>
+                        <p class="text-[28px] font-serif underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px]  text-white">Shop Now</p>
+                    </div>
+                </div>
+          </section>
     </main>
     <footer>
 
