added the image opacity

--- a/flower.html
+++ b/flower.html
@@ -120,19 +120,19 @@
                 <div class="flex gap-10">
             <!-- Left side 2 images -->
                     <div class="grid grid-row-1 gap-5">
-                        <div class="bg-cover bg-center h-[206px] w-[366px] rounded-2xl content-center text-center" style="background-image: url('./images/deal-bloom.png');">
+                        <div class="bg-cover bg-center h-[206px] w-[366px] rounded-2xl opacity-80 content-center text-center" style="background-image: url('./images/deal-bloom.png');">
                             <h4 class="text-[20px] font-serif font-bold text-white">60% Off | Bloom Plant</h4>
                             <p class="text-2xl underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px] text-white">Shop Now</p>
                         </div>
-                        <div class="bg-cover bg-center h-[206px] w-[366px] rounded-2xl content-center text-center" style="background-image: url('./images/deal-ana.png');">
+                        <div class="bg-cover bg-center h-[206px] w-[366px] rounded-2xl opacity-80 content-center text-center" style="background-image: url('./images/deal-ana.png');">
                             <h4 class="text-[20px] font-serif font-bold text-white">30% Off | Ana  Plant</h4>
                             <p class="text-2xl underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px] text-white">Shop Now</p>
                         </div>
                     </div>
             <!-- right side 1 image -->
-                    <div class="bg-cover bg-center h-[423px] w-[753px] rounded-2xl content-center text-center" style="background-image: url('./images/deal-zabo.png');">
-                        <h4 class="text-[40px] font-serif font-bold text-white">25% Off | Zabo Plant</h4>
-                        <p class="text-[28px] font-serif underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px]  text-white">Shop Now</p>
+                    <div class="bg-cover bg-center h-[423px] w-[753px] opacity-80 rounded-2xl content-center text-center drop-shadow-lg" style="background-image: url('./images/deal-zabo.png');">
+                        <h4 class="text-[40px] shadow-lg font-serif font-bold text-white">25% Off | Zabo Plant</h4>
+                        <p class="text-[28px] shadow-lg font-serif underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px]  text-white">Shop Now</p>
                     </div>
                 </div>
           </section>
