added the subscribed style

--- a/flower.html
+++ b/flower.html
@@ -136,6 +136,14 @@
                     </div>
                 </div>
           </section>
+        <!-- Subscribed section style -->
+          <section class="m-auto my-50">
+                <div class="lg:w-100% h-[533px] content-center text-center justify-center"style="background-image: url('./images/news-letter-bg.png');">
+                    <h3 class="text-[50px] font-serif font-bold text-white">Join the colorful Bunch</h3>
+                    <input type="text" placeholder="write email" label="button" class="w-[640px] h-[50px] border-2 m-0">
+                    <input class="bg-[#E95A08] text-white w-[270px] py-3 px-4 text-2xl m-0"  type="button" value="Subscribe">
+                </div>
+          </section>
     </main>
     <footer>
 
