added the footer section

--- a/flower.html
+++ b/flower.html
@@ -97,7 +97,7 @@
         <!-- Banner for flower plant and lover -->
          <section class="lg:max-w-6xl m-auto my-50 justify-center">
             <div>
-                <img class="max-w-sm w-[286px] h-[286px] absolute top-470 left-195" src="images/trusted-badge.png" alt="">
+                <img class="max-w-sm w-[286px] h-[286px] absolute top-470 left-112" src="images/trusted-badge.png" alt="">
             </div>
             <div class="flex gap-[55px]">
                 <img class="w-[540px] h-[590px]" src="images/flower-store.png" alt="">
@@ -139,14 +139,50 @@
         <!-- Subscribed section style -->
           <section class="m-auto my-50">
                 <div class="lg:w-100% h-[533px] content-center text-center justify-center"style="background-image: url('./images/news-letter-bg.png');">
-                    <h3 class="text-[50px] font-serif font-bold text-white">Join the colorful Bunch</h3>
-                    <input type="text" placeholder="write email" label="button" class="w-[640px] h-[50px] border-2 m-0">
-                    <input class="bg-[#E95A08] text-white w-[270px] py-3 px-4 text-2xl m-0"  type="button" value="Subscribe">
-                </div>
+                <h3 class="text-[50px] font-serif font-bold text-white">Join the colorful Bunch</h3>
+                <div class="flex m-auto content-center text-center justify-center">
+                    <div>
+                        <input type="text" placeholder="Write email" label="button" class="w-[640px] h-[50px] bg-white pl-5 mr-0">
+                    </div>
+                        <button class="bg-[#E95A08] text-center text-white w-[186px] h-[50px] p-auto text-2xl m-0"  type="button" value="">Subscribed</button>
+                    </div>
+                </div>  
           </section>
     </main>
     <footer>
-
+        <!-- footer style -->
+        <section class="lg:max-w-6xl m-auto my-40">
+            <div class="flex m-auto gap-20 content-center item-center justify-center">
+                <div class="max-w-sm w-">
+                    <img src="images/logo.png" alt="">
+                    <p class="text-2xl my-5 text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+                </div>
+                <div>
+                    <ul class="space-y-5 text-[16px] text-gray-400 font-inter">
+                        <li>Home</li>
+                        <li>About us</li>
+                        <li>Blog</li>
+                        <li>FAQ</li>
+                        <li>Contact us</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="space-y-5 text-[16px] text-gray-400 font-inter">
+                        <li>Features</li>
+                        <li>Pricing</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Service</li>
+                        <li>Help Center</li>
+                    </ul>
+                </div>
+                <div class="flex mt-8 gap-5">
+                    <a href="https://www.linkedin.com/"><img src="images/icon-linkedin.png" alt="linkedin"></a>
+                    <a href="https://x.com/"><img src="images/icon-twitter.png" alt="Twitter"></a>
+                    <a href="https://www.facebook.com"><img src="images/icon-facebook.png" alt="Facebook"></a>
+                    <a href="https://www.youtube.com/"><img src="images/icon-youtube.png" alt="Youtube"></a>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
